--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         
-        <h1>GETTING STARTED WITH BRACKETS</h1>
+        <h1>Mudhish</h1>
         <h2>This is your guide!</h2>
         
         <!--
